--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ ext {
 
 dependencies {
 	implementation 'org.apache.geode:geode-core:1.13.2'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
